Corrected 'hero-content' alignment

--- a/style.css
+++ b/style.css
@@ -538,7 +538,7 @@ span {
     height: 200px;
     margin: 1rem 0;
     padding: 1rem;
-    margin-top: 55px;
+    margin-top: 120px;
     border-radius: 1rem;
     display: flex;
     justify-content: space-between;
